fixed problem where certain elements were overlapping at smaller resolutions. Still need to fix several responsiveness issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,9 @@ h5{
 
 }
 
-
+#game-card{
+    padding-top: 5%;
+}
 
 .card{
     border-radius: 20px;
@@ -53,7 +55,7 @@ h5{
 }
 
 #input-left{
-    min-height: 400px;
+    min-height: 300px;
     min-width:fit-content;
     background-image: url('https://images.unsplash.com/photo-1601407061881-ca9fca12ff51?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
     background-size:cover;
@@ -61,10 +63,29 @@ h5{
     margin:0;
 }
 #input-right{
-    min-height: 400px;
+    min-height: 300px;
     min-width:fit-content;
     background-image: url('https://images.unsplash.com/photo-1593108408993-58ee9c7825c2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');
     background-size:cover;
     background-position: center;
     margin:0;
+}
+
+#game-blurb{
+    padding:0px;
+    margin-left: 33px;
+    min-width: 200px;
+}
+
+#review-blurb{
+    color:white;
+    min-width: 240px;
+}
+
+#copyright{
+    text-align:center;
+}
+
+.card-columns {
+    min-width: 200px;
 }
